code/typescript/Publisher/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Publisher client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v3.12.6-blue)](https://developer.factset.com/api-catalog/)
[![npm](https://img.shields.io/badge/npm-v0.23.1-orange)](https://www.npmjs.com/package/@factset/sdk-publisher/v/0.23.1)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.12.6
- SDK version: 0.23.1
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-publisher@0.23.1
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-publisher@0.23.1
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, AccountsApi } = require('@factset/sdk-publisher');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new AccountsApi();
const path = Client:; // String | The directory to get the accounts and sub-directories.

// Call api endpoint
apiInstance.getAccounts(path).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-publisher');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*publisher.AccountsApi* | [**getAccounts**](docs/AccountsApi.md#getAccounts) | **GET** /analytics/lookups/v3/accounts/{path} | Get accounts and sub-directories in a directory
*publisher.CurrenciesApi* | [**getCurrencies**](docs/CurrenciesApi.md#getCurrencies) | **GET** /analytics/lookups/v3/currencies | Get currencies
*publisher.DocumentsApi* | [**getPubDocuments**](docs/DocumentsApi.md#getPubDocuments) | **GET** /analytics/engines/pub/v3/documents/{path} | Gets Publisher documents and sub-directories in a directory
*publisher.PubCalculationsApi* | [**cancelCalculationById**](docs/PubCalculationsApi.md#cancelCalculationById) | **DELETE** /analytics/engines/pub/v3/calculations/{id} | Cancel Pub calculation by id
*publisher.PubCalculationsApi* | [**getAllCalculations**](docs/PubCalculationsApi.md#getAllCalculations) | **GET** /analytics/engines/pub/v3/calculations | Get all calculations
*publisher.PubCalculationsApi* | [**getCalculationParameters**](docs/PubCalculationsApi.md#getCalculationParameters) | **GET** /analytics/engines/pub/v3/calculations/{id} | Get Pub calculation parameters by id
*publisher.PubCalculationsApi* | [**getCalculationStatusById**](docs/PubCalculationsApi.md#getCalculationStatusById) | **GET** /analytics/engines/pub/v3/calculations/{id}/status | Get Pub calculation status by id
*publisher.PubCalculationsApi* | [**getCalculationUnitResultById**](docs/PubCalculationsApi.md#getCalculationUnitResultById) | **GET** /analytics/engines/pub/v3/calculations/{id}/units/{unitId}/result | Get Pub calculation result by id
*publisher.PubCalculationsApi* | [**postAndCalculate**](docs/PubCalculationsApi.md#postAndCalculate) | **POST** /analytics/engines/pub/v3/calculations | Create and Run Pub calculation
*publisher.PubCalculationsApi* | [**putAndCalculate**](docs/PubCalculationsApi.md#putAndCalculate) | **PUT** /analytics/engines/pub/v3/calculations/{id} | Create or Update Pub calculation and run it.


## Documentation for Models

 - [publisher.AccountDirectories](docs/AccountDirectories.md)
 - [publisher.AccountDirectoriesRoot](docs/AccountDirectoriesRoot.md)
 - [publisher.CalculationStatus](docs/CalculationStatus.md)
 - [publisher.CalculationStatusMeta](docs/CalculationStatusMeta.md)
 - [publisher.CalculationStatusRoot](docs/CalculationStatusRoot.md)
 - [publisher.CalculationUnitStatus](docs/CalculationUnitStatus.md)
 - [publisher.CalculationUnitStatusMeta](docs/CalculationUnitStatusMeta.md)
 - [publisher.CalculationsSummary](docs/CalculationsSummary.md)
 - [publisher.CalculationsSummaryRoot](docs/CalculationsSummaryRoot.md)
 - [publisher.ClientErrorResponse](docs/ClientErrorResponse.md)
 - [publisher.Currency](docs/Currency.md)
 - [publisher.CurrencyRoot](docs/CurrencyRoot.md)
 - [publisher.DocumentDirectories](docs/DocumentDirectories.md)
 - [publisher.DocumentDirectoriesRoot](docs/DocumentDirectoriesRoot.md)
 - [publisher.Error](docs/Error.md)
 - [publisher.ErrorSource](docs/ErrorSource.md)
 - [publisher.PaginationInfo](docs/PaginationInfo.md)
 - [publisher.PaginationMeta](docs/PaginationMeta.md)
 - [publisher.PubCalculationParameters](docs/PubCalculationParameters.md)
 - [publisher.PubCalculationParametersRoot](docs/PubCalculationParametersRoot.md)
 - [publisher.PubDateParameters](docs/PubDateParameters.md)
 - [publisher.PubIdentifier](docs/PubIdentifier.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
